# CR

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  feature_importance.csv  install.bat  install.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  wiki-sync.yaml
docs/: .gitignore  Coding_Practices.md  index.html
docs/tutorial/: 00_start_here.html  01_data_discovery.html  01c_temporal_patterns.html  01d_event_aggregation.html  06_feature_opportunities.html  08_baseline_experiments.html  index.html  scoring_dashboard.html
docs/tutorial/_processed/: 00_start_here.ipynb  01_data_discovery.ipynb  01a_temporal_deep_dive.ipynb  01b_temporal_quality.ipynb  01c_temporal_patterns.ipynb  01d_event_aggregation.ipynb  02_column_deep_dive.ipynb  03_quality_assessment.ipynb  04_relationship_analysis.ipynb  05_multi_dataset.ipynb  06_feature_opportunities.ipynb  07_modeling_readiness.ipynb  08_baseline_experiments.ipynb  09_business_alignment.ipynb  10_spec_generation.ipynb  scoring_dashboard.ipynb
docs/tutorial/customer-emails/: 00_start_here.html  01_data_discovery.html  01a_temporal_deep_dive.html  01b_temporal_quality.html  01c_temporal_patterns.html  01d_event_aggregation.html  02_column_deep_dive.html  03_quality_assessment.html  04_relationship_analysis.html  05_multi_dataset.html  06_feature_opportunities.html  07_modeling_readiness.html  08_baseline_experiments.html  09_business_alignment.html  10_spec_generation.html  index.html  scoring_dashboard.html
docs/tutorial/executed/: 00_start_here.ipynb  01_data_discovery.ipynb  01a_a_temporal_text_deep_dive.ipynb  01a_temporal_deep_dive.ipynb  01b_temporal_quality.ipynb  01c_temporal_patterns.ipynb  01d_event_aggregation.ipynb  02_column_deep_dive.ipynb  02a_text_columns_deep_dive.ipynb  03_quality_assessment.ipynb  04_relationship_analysis.ipynb  05_multi_dataset.ipynb  06_feature_opportunities.ipynb  07_modeling_readiness.ipynb  08_baseline_experiments.ipynb  09_business_alignment.ipynb  10_spec_generation.ipynb  scoring_dashboard.ipynb
docs/tutorial/retail-churn/: 01a_a_temporal_text_deep_dive.html  01a_temporal_deep_dive.html  01b_temporal_quality.html  02_column_deep_dive.html  02a_text_columns_deep_dive.html  03_quality_assessment.html  04_relationship_analysis.html  05_multi_dataset.html  07_modeling_readiness.html  09_business_alignment.html  10_spec_generation.html  index.html
docs/wiki/: Architecture.md  Databricks-Track.md  Exploration-Loop.md  Feature-Store.md  Getting-Started.md  Home.md  Local-Track.md  Temporal-Framework.md  Tutorial-Bank-Churn.md  Tutorial-Customer-Emails.md  Tutorial-Netflix-Churn.md  Tutorial-Retail-Churn.md  _Sidebar.md
exploration_notebooks/: 00_start_here.ipynb  01_data_discovery.ipynb  01a_a_temporal_text_deep_dive.ipynb  01a_temporal_deep_dive.ipynb  01b_temporal_quality.ipynb  01c_temporal_patterns.ipynb  01d_event_aggregation.ipynb  02_column_deep_dive.ipynb  02a_text_columns_deep_dive.ipynb  03_quality_assessment.ipynb  04_relationship_analysis.ipynb  05_multi_dataset.ipynb  06_feature_opportunities.ipynb  07_modeling_readiness.ipynb  08_baseline_experiments.ipynb  09_business_alignment.ipynb  10_spec_generation.ipynb
scripts/: README.md  update_notebook_paths.py
scripts/data/: create_snapshot.py  generate_retail_dataset.py  generate_test_data.py  migrate_to_temporal.py
scripts/databricks/: build_wheel.sh  capture_runtime.py  dbr_init.sh  generate_constraints.py  notebook_setup.py
scripts/notebooks/: export_tutorial_html.py  init_project.py  plotly_image_preprocessor.py  test_notebooks.py
scripts/templates/tutorial_html/: index.html.j2
src/customer_retention/: __init__.py  cli.py
src/customer_retention/artifacts/: __init__.py  fit_artifact_registry.py
tests/: conftest.py  test_error_abtest_coverage.py  test_explorer_type_inferencer.py  test_notebooks.py  test_remaining_coverage.py  test_severity_dedup_segment.py
tests/analysis/auto_explorer/: test_exploration_manager.py  test_explorer.py  test_findings.py  test_findings_availability.py  test_findings_metadata_population.py  test_layered_recommendations.py  test_layered_recommendations_fit.py  test_recommendation_builder.py  test_recommendations.py
tests/analysis/business/: test_ab_test_designer.py  test_fairness.py  test_intervention.py  test_report_generator.py  test_risk_profile.py  test_roi.py
tests/analysis/diagnostics/: test_calibration_analyzer.py  test_cv_analyzer.py  test_error_analyzer.py  test_leakage_detector.py  test_leakage_detector_coverage.py  test_leakage_detector_new_checks.py  test_leakage_detector_temporal.py  test_noise_tester.py  test_overfitting_analyzer.py  test_segment_analyzer.py
tests/analysis/discovery/: test_config_generator.py  test_discovery_flow.py  test_type_inferencer.py
tests/analysis/interpretability/: test_cohort_analyzer.py  test_counterfactual.py  test_individual_explainer.py  test_pdp_generator.py  test_shap_explainer.py
tests/analysis/recommendations/: test_base.py  test_pipeline.py  test_registry.py
tests/analysis/visualization/: test_chart_builder.py  test_console.py  test_display.py  test_number_formatter.py
tests/artifacts/: test_fit_artifact_registry.py
tests/core/compat/: test_detection.py  test_ops.py
tests/core/components/: test_base.py  test_enums.py  test_orchestrator.py  test_registry.py
tests/core/config/: test_column_config.py  test_experiments.py  test_pipeline_config.py  test_source_config.py
tests/core/utils/: test_leakage.py
tests/diagnostics/: test_leakage_timeseries_extended.py
tests/fixtures/: README.md
tests/fixtures/generators/: __init__.py  test_time_series_generator.py  time_series_generator.py
tests/integration/: test_chapter1.py  test_chapter3.py  test_chapter4.py  test_chapter5.py  test_chapter6.py  test_chapter7.py  test_chapter8.py  test_exploration_notebooks_experiments_dir.py  test_feature_store_e2e.py  test_profiling_quality_integration.py  test_profiling_retail.py  test_retail_dataset.py  test_temporal_e2e.py  test_training_scoring_consistency.py
(+434 files in other folders)
